<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sebastianruiz.punto3.Areas"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Areas">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Circulo"
                    android:text="@string/Circulo"
                    android:textSize="50sp"
                    android:onClick="click"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Cuadro"
                    android:text="@string/Cuadro"
                    android:textSize="50sp"
                    android:onClick="click"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Rectangulo"
                    android:text="@string/Rectangulo"
                    android:textSize="50sp"
                    android:onClick="click"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/Triangulo"
                    android:text="@string/Triangulo"
                    android:textSize="50sp"
                    android:onClick="click"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp">


                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/Dato1"
                    android:hint="@string/Hint"
                    android:textSize="50sp"
                    android:inputType="number"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/Dato2"
                    android:hint="@string/Hint"
                    android:textSize="50sp"
                    android:inputType="number"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Calcular"
                android:text="@string/Cacular"
                android:textSize="30sp"
                android:onClick="click"
                android:layout_marginTop="10sp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Resultado"
                android:text="@string/Resultado"
                android:textSize="50sp"
                android:layout_marginTop="10sp"
                android:gravity="center"/>



        </LinearLayout>

    </ScrollView>




</LinearLayout>
